# sha-256

./: Cargo.toml  README.md
example/: Cargo.toml  README.md
example/src/: main.rs
src/: lib.rs
utils/: binToNum.js  hexToBytes.js  numToBin.js  rep.js  sha256.js
